# snooker-score-bot

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  USERREADME.md  cloudbuild-test.yaml  cloudbuild.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  snooker-api.md
app/: __init__.py  app.py  cli.py  errors.py  inference.py  main.py  messages.py  models.py  prompts.py  settings.py  sheets.py  sixred.py  test_app.py  twilio_client.py  utils.py
app/llm/: __init__.py  fewshots_mock.py  inference.py  prompts.py
app/tests/: conftest.py  test_app.py  test_app2.py  test_models.py
helpers/: registerPlayers.gs
resources/appScript/: Code.gs  registerPlayers.gs
src/: sheets.py
src/snooker_score_bot/: main.py  models.py  monitoring.py  settings.py  sheets.py  twilio_client.py
src/snooker_score_bot/llm/: __init__.py  inference.py
tests/: test_app.py  test_models.py
